View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031082 | Open CASCADE | OCCT:Visualization | public | 2019-10-18 12:18 | 2020-12-02 17:12 |
Reporter | vro | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031082: Visualization - crash on display if there are no lights in the view | ||||
Description | On attempt to display something in the viewer 3d the view crashes if there are no any lights added to the view. See please a picture attached. | ||||
Steps To Reproduce | Only in the customer app | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
crashview.png (62,717 bytes) |
|
Branch CR31082 has been created by kgv. SHA-1: c121666fb8acabb099e62ba079d2c93ac530064a Detailed log of new commits: Author: kgv Date: Sun Oct 20 14:53:13 2019 +0300 0031082: Visualization - crash on display if there are no lights in the view OpenGl_View - fixed uninitialized property myLights. |
|
Branch CR31082 has been deleted by inv. SHA-1: c121666fb8acabb099e62ba079d2c93ac530064a |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-10-18 12:18 | vro | New Issue | |
2019-10-18 12:18 | vro | Assigned To | => kgv |
2019-10-18 12:18 | vro | File Added: crashview.png | |
2019-10-20 14:54 | git | Note Added: 0088363 | |
2019-10-20 14:54 | kgv | Severity | minor => trivial |
2019-10-20 14:54 | kgv | Status | new => resolved |
2019-10-20 14:54 | kgv | Status | resolved => reviewed |
2019-10-28 01:51 | apn | Changeset attached | => occt master 8445efca |
2019-10-28 01:51 | apn | Assigned To | kgv => apn |
2019-10-28 01:51 | apn | Status | reviewed => verified |
2019-10-28 01:51 | apn | Resolution | open => fixed |
2019-11-10 11:42 | git | Note Added: 0088864 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |