0031082: Visualization - crash on display if there are no lights in the view

OpenGl_View - fixed uninitialized property myLights.